--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "animate.css": "^4.1.1",
     "buefy": "^0.9.11",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^9.6.4",
     "v-movable": "^0.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
